fix overlap between menu and content

--- a/_menu.less
+++ b/_menu.less
@@ -11,6 +11,7 @@
   height: 100%;
   padding-top: 15px;
   overflow: visible;
+  z-index: 2;
 
   &, ul {
     width: @collapsed-width;
